--- a/University/WebContent/WEB-INF/web.xml
+++ b/University/WebContent/WEB-INF/web.xml
@@ -10,4 +10,9 @@
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>/faces/*</url-pattern>
   </servlet-mapping>
+  
+  <context-param>
+	<param-name>javax.faces.PROJECT_STAGE</param-name>
+	<param-value>Production</param-value>
+  </context-param>
 </web-app>
